[package]
name = "dopechain_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dopechain_rust_lib = { path = "../dopechain-rust-lib" }
dopechain_rust_macros = {path = "../dopechain-rust-macros"}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
