[package]
name = "dopechain-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = {version = "25.0.2", features = ["runtime"]}
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
base64 = "0.22.1"
